[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[project]
name = "orthomap"
version = "0.0.1"
description = "extract orthomap from OrthoFinder output for query species"
authors = [
    {name = "Kristian K Ullrich", email="ullrich@evolbio.mpg.de"},
]
maintainers = [
    {name = "Kristian K Ullrich", email="ullrich@evolbio.mpg.de"},
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["orthomap", "gene age", "orthologs", "phylostratigraphy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas>=1.5.1",
    "ete3",
    "scanpy",
    "seaborn",
    "harmonypy",
    "alive-progress",
    "wget",
    "pytest",
    "pip",
]

[project.urls]
"Homepage" = "https://github.com/kullrich/orthomap"
"Bug Tracker" = "https://github.com/kullrich/orthomap/issues"
documentation = "https://orthomap.readthedocs.io/en/latest/"
repository = "https://github.com/kullrich/orthomap"

[project.scripts]
orthomap = "orthomap.__main__:main"
of2orthomap = "orthomap.of2orthomap:main"
eggnog2orthomap = "orthomap.eggnog2orthomap:main"
ncbitax = "orthomap.ncbitax:main"
qlin = "orthomap.qlin:main"
gtf2t2g = "orthomap.gtf2t2g:main"
